--- a/container/src/main/resources/config.properties
+++ b/container/src/main/resources/config.properties
@@ -5,6 +5,7 @@ felix.log.level=1
 org.osgi.framework.bootdelegation=sun.reflect
 
 felix.auto.install=  \
+file:modules/wrapper-${project.version}.jar \
 file:modules/weld-osgi-core-mandatory-${project.version}.jar \
 file:modules/weld-osgi-core-api-${project.version}.jar \
 file:modules/weld-osgi-core-spi-${project.version}.jar \
