--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>nevernote-core</module>
         <module>nevernote-fwk</module>
         <module>container</module>
+        <module>wrapper</module>
     </modules>
     
     <build>
