--- a/nevernote-fwk/pom.xml
+++ b/nevernote-fwk/pom.xml
@@ -87,6 +87,18 @@
             <artifactId>jsr250-api</artifactId>
             <version>1.0</version>
         </dependency>
+        
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.161</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>12.0</version>
+        </dependency>
 
     </dependencies>
 
