Add upload controller. Fix static file serving

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@
 /nevernote-core/target/
 /wrapper/target/
 /container/target/
+/nevernote-core copie/target/
+/nevernote-plugin-translate/target/
+/nevernote-plugin-translator/target/
