--- a/nevernote-plugin-translator/pom.xml
+++ b/nevernote-plugin-translator/pom.xml
@@ -10,9 +10,9 @@
         <version>1.2.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>nevernote-core</artifactId>
+    <artifactId>nevernote-plugin-translator</artifactId>
     <packaging>bundle</packaging>
-    <name>Nevernote :: Core</name>
+    <name>Nevernote :: Plugins :: Translator</name>
 
     <developers>
         <developer>
@@ -34,18 +34,6 @@
         </dependency>
 
         <dependency>
-            <groupId>devoxx</groupId>
-            <artifactId>nevernote-fwk</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.compendium</artifactId>
-            <version>4.2.0</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.jboss.weld.osgi</groupId>
             <artifactId>weld-osgi-core-api</artifactId>
             <version>1.2.0-SNAPSHOT</version>
@@ -63,43 +51,6 @@
             <version>1.0-SP4</version>
         </dependency>
         
-                <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-server</artifactId>
-            <version>1.7-ea04</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-core</artifactId>
-            <version>1.7-ea04</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-json</artifactId>
-            <version>1.7-ea04</version>
-        </dependency>
-
-        <dependency>
-            <groupId>asm</groupId>
-            <artifactId>asm</artifactId>
-            <version>3.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>jsr250-api</artifactId>
-            <version>1.0</version>
-        </dependency>
-
     </dependencies>
 
     <build>
