--- a/container/src/main/resources/config.properties
+++ b/container/src/main/resources/config.properties
@@ -11,6 +11,7 @@ file:modules/weld-osgi-core-api-${project.version}.jar \
 file:modules/weld-osgi-core-spi-${project.version}.jar \
 file:modules/nevernote-api-${project.version}.jar \
 file:modules/nevernote-fwk-${project.version}.jar \
+file:modules/nevernote-plugin-translator-${project.version}.jar \
 file:modules/org.apache.felix.gogo.commands-0.4.0.jar  \
 file:modules/org.apache.felix.gogo.runtime-0.4.0.jar \
 file:modules/jsr311-api-1.1.jar 
