--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,59 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <groupId>devoxx</groupId>
+    <artifactId>nevernote</artifactId>
+    <version>1.2.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <name>Nevernote</name>
 
-    <groupId>demo-devoxx2012</groupId>
-    <artifactId>demo-devoxx2012</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <description>A note app</description>
 
+    <developers>
+        <developer>
+            <name>Mathieu Ancelin</name>
+            <email>mathieu.ancelin@serli.com</email>
+        </developer>
+        <developer>
+            <name>Matthieu Clochard</name>
+            <email>matthieu.clochard@serli.com</email>
+        </developer>
+    </developers>
+
+    <modules>
+        <module>nevernote-api</module>
+        <module>nevernote-core</module>
+        <module>nevernote-fwk</module>
+        <module>container</module>
+        <module>wrapper</module>
+        <module>nevernote-plugin-translator</module>
+    </modules>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>maven-bundle-plugin</artifactId>
+                    <version>2.1.0</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <instructions>
+                            <_include>
+                                -target/classes/META-INF/${project.artifactId}.bnd
+                            </_include>
+                        </instructions>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <configuration>
+                        <source>1.6</source>
+                        <target>1.6</target>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
     
 </project>
