--- a/nevernote-fwk/pom.xml
+++ b/nevernote-fwk/pom.xml
@@ -99,6 +99,12 @@
             <artifactId>guava</artifactId>
             <version>12.0</version>
         </dependency>
+        
+        <!--<dependency>
+            <groupId>us.monoid.web</groupId>
+            <artifactId>resty</artifactId>
+            <version>0.3.1</version>
+        </dependency>-->
 
     </dependencies>
 
