--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,14 @@
 /nevernote-core copie/target/
 /nevernote-plugin-translate/target/
 /nevernote-plugin-translator/target/
+/nevernote-plugin-translator copie 2/target/
+/nevernote-plugin-translator copie/target/
+/nevernote-plugin-translator copie 3/target/
+/nevernote-plugin-translator copie 4/target/
+/nevernote-plugin-translator -en/target/
+/nevernote-plugin-translator-en/target/
+/nevernote-plugin-translator-de/target/
+/nevernote-plugin-translator-fr/target/
+/nevernote-plugin-translator-sp/target/
+/nevernote-plugin-translator-tweet/target/
+/nevernote-plugin-tweet/target/
