--- a/nevernote-fwk/pom.xml
+++ b/nevernote-fwk/pom.xml
@@ -100,11 +100,11 @@
             <version>12.0</version>
         </dependency>
         
-        <!--<dependency>
+        <dependency>
             <groupId>us.monoid.web</groupId>
             <artifactId>resty</artifactId>
             <version>0.3.1</version>
-        </dependency>-->
+        </dependency>
 
     </dependencies>
 
@@ -113,7 +113,6 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-
             </plugin>
         </plugins>
     </build>
