--- a/nevernote-plugin-translator-fr/pom.xml
+++ b/nevernote-plugin-translator-fr/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    
+
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>nevernote</artifactId>
@@ -10,9 +10,9 @@
         <version>1.2.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>nevernote-api</artifactId>
+    <artifactId>nevernote-plugin-translator-fr</artifactId>
     <packaging>bundle</packaging>
-    <name>Nevernote :: API</name>
+    <name>Nevernote :: Plugins :: Translator :: FR</name>
 
     <developers>
         <developer>
@@ -28,15 +28,21 @@
     <dependencies>
 
         <dependency>
-            <groupId>org.jboss.weld.osgi</groupId>
-            <artifactId>weld-osgi-core-api</artifactId>
-            <version>1.2.0-SNAPSHOT</version>
+            <groupId>devoxx</groupId>
+            <artifactId>nevernote-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>devoxx</groupId>
+            <artifactId>nevernote-fwk</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.compendium</artifactId>
-            <version>4.2.0</version>
+            <groupId>org.jboss.weld.osgi</groupId>
+            <artifactId>weld-osgi-core-api</artifactId>
+            <version>1.2.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -50,7 +56,7 @@
             <artifactId>cdi-api</artifactId>
             <version>1.0-SP4</version>
         </dependency>
-
+        
     </dependencies>
 
     <build>
@@ -58,6 +64,7 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
+
             </plugin>
         </plugins>
     </build>
