--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,11 @@
         <module>nevernote-fwk</module>
         <module>container</module>
         <module>wrapper</module>
-        <module>nevernote-plugin-translator</module>
+        <module>nevernote-plugin-translator-de</module>
+        <module>nevernote-plugin-translator-sp</module>
+        <module>nevernote-plugin-translator-en</module>
+        <module>nevernote-plugin-translator-fr</module>
+        <module>nevernote-plugin-tweet</module>
     </modules>
 
     <build>
