--- a/nevernote-fwk/pom.xml
+++ b/nevernote-fwk/pom.xml
@@ -105,6 +105,18 @@
             <artifactId>resty</artifactId>
             <version>0.3.1</version>
         </dependency>
+        
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.2.2</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.3</version>
+        </dependency>
 
     </dependencies>
 
