Add upper plugin

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@
 /nevernote-plugin-translator-sp/target/
 /nevernote-plugin-translator-tweet/target/
 /nevernote-plugin-tweet/target/
+/nevernote-plugin-tweet copie/target/
+/nevernote-plugin-upper/target/
