--- a/container/src/main/resources/config.properties
+++ b/container/src/main/resources/config.properties
@@ -16,6 +16,7 @@ file:modules/nevernote-plugin-translator-en-${project.version}.jar \
 file:modules/nevernote-plugin-translator-fr-${project.version}.jar \
 file:modules/nevernote-plugin-translator-sp-${project.version}.jar \
 file:modules/nevernote-plugin-tweet-${project.version}.jar \
+file:modules/nevernote-plugin-upper-${project.version}.jar \
 file:modules/org.apache.felix.gogo.commands-0.4.0.jar  \
 file:modules/org.apache.felix.gogo.runtime-0.4.0.jar \
 file:modules/jsr311-api-1.1.jar 
