--- a/nevernote-api/pom.xml
+++ b/nevernote-api/pom.xml
@@ -35,7 +35,7 @@
 
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.compendium</artifactId>
+            <artifactId>org.osgi.core</artifactId>
             <version>4.2.0</version>
         </dependency>
 
