--- a/nevernote-fwk/pom.xml
+++ b/nevernote-fwk/pom.xml
@@ -117,7 +117,21 @@
             <artifactId>commons-io</artifactId>
             <version>2.3</version>
         </dependency>
+        
+        <dependency>
+            <groupId>com.memetix</groupId>
+            <artifactId>microsoft-translator-java-api</artifactId>
+            <version>0.6.1</version>
+            <type>jar</type>
+        </dependency>
 
+    <dependency>
+        <groupId>com.googlecode.json-simple</groupId>
+        <artifactId>json-simple</artifactId>
+        <version>1.1</version>
+        <type>jar</type>
+    </dependency>
+    
     </dependencies>
 
     <build>
