--- a/nevernote-core/pom.xml
+++ b/nevernote-core/pom.xml
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>org.jboss.weld.osgi</groupId>
             <artifactId>weld-osgi-core-api</artifactId>
-            <version>1.2.0-SNAPSHOT</version>
+            <version>1.2.0.Beta1</version>
         </dependency>
 
         <dependency>
