--- a/pom.xml
+++ b/pom.xml
@@ -1,66 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>devoxx</groupId>
-    <artifactId>nevernote</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <name>Nevernote</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+   <modelVersion>4.0.0</modelVersion>
+   <groupId>devoxx</groupId>
+   <artifactId>nevernote</artifactId>
+   <version>1.2.0-SNAPSHOT</version>
+   <packaging>pom</packaging>
+   <name>Nevernote</name>
 
-    <description>A note app</description>
+   <description>A note app</description>
 
-    <developers>
-        <developer>
-            <name>Mathieu Ancelin</name>
-            <email>mathieu.ancelin@serli.com</email>
-        </developer>
-        <developer>
-            <name>Matthieu Clochard</name>
-            <email>matthieu.clochard@serli.com</email>
-        </developer>
-    </developers>
+   <developers>
+      <developer>
+         <name>Mathieu Ancelin</name>
+         <email>mathieu.ancelin@serli.com</email>
+      </developer>
+      <developer>
+         <name>Matthieu Clochard</name>
+         <email>matthieu.clochard@serli.com</email>
+      </developer>
+   </developers>
 
-    <modules>
-        <module>nevernote-api</module>
-        <module>nevernote-core</module>
-        <module>nevernote-fwk</module>
-        <module>container</module>
-        <module>wrapper</module>
-        <module>nevernote-plugin-translator-de</module>
-        <module>nevernote-plugin-translator-sp</module>
-        <module>nevernote-plugin-translator-en</module>
-        <module>nevernote-plugin-translator-fr</module>
-        <module>nevernote-plugin-tweet</module>
-        <module>nevernote-plugin-upper</module>
-    </modules>
+   <modules>
+      <module>nevernote-api</module>
+      <module>nevernote-core</module>
+      <module>nevernote-fwk</module>
+      <module>container</module>
+      <module>wrapper</module>
+      <module>nevernote-plugin-translator-de</module>
+      <module>nevernote-plugin-translator-sp</module>
+      <module>nevernote-plugin-translator-en</module>
+      <module>nevernote-plugin-translator-fr</module>
+      <module>nevernote-plugin-tweet</module>
+      <module>nevernote-plugin-upper</module>
+   </modules>
 
-    <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.felix</groupId>
-                    <artifactId>maven-bundle-plugin</artifactId>
-                    <version>2.1.0</version>
-                    <extensions>true</extensions>
-                    <configuration>
-                        <instructions>
-                            <_include>
-                                -target/classes/META-INF/${project.artifactId}.bnd
-                            </_include>
-                        </instructions>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <configuration>
-                        <source>1.6</source>
-                        <target>1.6</target>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
-    
+   <build>
+      <pluginManagement>
+         <plugins>
+            <plugin>
+               <groupId>org.apache.felix</groupId>
+               <artifactId>maven-bundle-plugin</artifactId>
+               <version>2.1.0</version>
+               <extensions>true</extensions>
+               <configuration>
+                  <instructions>
+                     <_include>
+                        -target/classes/META-INF/${project.artifactId}.bnd
+                     </_include>
+                  </instructions>
+               </configuration>
+            </plugin>
+            <plugin>
+               <artifactId>maven-compiler-plugin</artifactId>
+               <configuration>
+                  <source>1.6</source>
+                  <target>1.6</target>
+               </configuration>
+            </plugin>
+         </plugins>
+      </pluginManagement>
+   </build>
+
 </project>
