Cleaning up pom: moving version management to dependency management and adding properties to ease dependencies version updates

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,123 @@
       <module>nevernote-plugin-upper</module>
    </modules>
 
+   <properties>
+      <weld.osgi.version>1.2.0-SNAPSHOT</weld.osgi.version>
+      <osgi.version>4.2.0</osgi.version>
+      <felix.framework.version>3.0.6</felix.framework.version>
+      <felix.shell.version>1.0.2</felix.shell.version>
+      <felix.shell.text.ui.version>1.0.2</felix.shell.text.ui.version>
+      <felix.obr.version>1.2.1</felix.obr.version>
+      <felix.http.version>2.0.4</felix.http.version>
+      <felix.log.version>1.0.0</felix.log.version>
+      <felix.configadmin.version>1.2.8</felix.configadmin.version>
+      <gogo.command.version>0.4.0</gogo.command.version>
+      <gogo.runtime.version>0.4.0</gogo.runtime.version>
+   </properties>
+
+   <dependencyManagement>
+      <dependencies>
+         <dependency>
+            <groupId>org.jboss.weld.osgi</groupId>
+            <artifactId>weld-osgi-core-api</artifactId>
+            <version>${weld.osgi.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.jboss.weld.osgi</groupId>
+            <artifactId>weld-osgi-core-spi</artifactId>
+            <version>${weld.osgi.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.jboss.weld.osgi</groupId>
+            <artifactId>weld-osgi-core-extension</artifactId>
+            <version>${weld.osgi.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.jboss.weld.osgi</groupId>
+            <artifactId>weld-osgi-core-mandatory</artifactId>
+            <version>${weld.osgi.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.jboss.weld.osgi</groupId>
+            <artifactId>weld-osgi-core-integration</artifactId>
+            <version>${weld.osgi.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.jboss.weld</groupId>
+            <artifactId>weld-core</artifactId>
+            <version>${weld.osgi.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.jboss.weld.se</groupId>
+            <artifactId>weld-se-core</artifactId>
+            <version>${weld.osgi.version}</version>
+         </dependency>
+
+         <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.core</artifactId>
+            <version>${osgi.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.compendium</artifactId>
+            <version>${osgi.version}</version>
+         </dependency>
+
+         <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.main</artifactId>
+            <version>${felix.framework.version}</version>
+            <scope>provided</scope>
+         </dependency>
+         <dependency>
+            <groupId>org.apache.felix.gogo</groupId>
+            <artifactId>org.apache.felix.gogo.commands</artifactId>
+            <version>${gogo.command.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.apache.felix.gogo</groupId>
+            <artifactId>org.apache.felix.gogo.runtime</artifactId>
+            <version>${gogo.runtime.version}</version>
+         </dependency>         
+         <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.bundlerepository</artifactId>
+            <version>${felix.obr.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.shell.tui</artifactId>
+            <version>${felix.shell.text.ui.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.shell</artifactId>
+            <version>${felix.shell.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.http.bundle</artifactId>
+            <version>${felix.http.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.log</artifactId>
+            <version>${felix.log.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.configadmin</artifactId>
+            <version>${felix.configadmin.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>jsr311-api</artifactId>
+            <version>1.1</version>
+         </dependency>
+      </dependencies>
+   </dependencyManagement>
+
    <build>
       <pluginManagement>
          <plugins>
