--- a/container/src/main/resources/config.properties
+++ b/container/src/main/resources/config.properties
@@ -6,28 +6,28 @@ org.osgi.framework.bootdelegation=sun.reflect
 
 felix.auto.install=  \
 file:modules/wrapper-${project.version}.jar \
-file:modules/weld-osgi-core-mandatory-${project.version}.jar \
-file:modules/weld-osgi-core-api-${project.version}.jar \
-file:modules/weld-osgi-core-spi-${project.version}.jar \
+file:modules/weld-osgi-core-mandatory-${weld.osgi.version}.jar \
+file:modules/weld-osgi-core-api-${weld.osgi.version}.jar \
+file:modules/weld-osgi-core-spi-${weld.osgi.version}.jar \
 file:modules/nevernote-api-${project.version}.jar \
 file:modules/nevernote-fwk-${project.version}.jar \
 file:modules/nevernote-plugin-translator-en-${project.version}.jar \
 file:modules/nevernote-plugin-translator-fr-${project.version}.jar \
 file:modules/nevernote-plugin-upper-${project.version}.jar \
-file:modules/org.apache.felix.gogo.commands-0.4.0.jar  \
-file:modules/org.apache.felix.gogo.runtime-0.4.0.jar \
+file:modules/org.apache.felix.gogo.commands-${gogo.command.version}.jar  \
+file:modules/org.apache.felix.gogo.runtime-${gogo.runtime.version}.jar \
 file:modules/jsr311-api-1.1.jar 
 
 felix.auto.start= \
-file:modules/weld-osgi-core-extension-${project.version}.jar \
-file:modules/weld-osgi-core-integration-${project.version}.jar \
+file:modules/weld-osgi-core-extension-${weld.osgi.version}.jar \
+file:modules/weld-osgi-core-integration-${weld.osgi.version}.jar \
 file:modules/nevernote-core-${project.version}.jar \
-file:modules/org.apache.felix.configadmin-1.2.8.jar \
-file:modules/org.apache.felix.http.bundle-2.0.4.jar \
-file:modules/org.apache.felix.log-1.0.0.jar \
-file:modules/org.apache.felix.shell-1.0.2.jar \
-file:modules/org.apache.felix.shell.tui-1.0.2.jar \
-file:modules/org.apache.felix.bundlerepository-1.2.1.jar
+file:modules/org.apache.felix.configadmin-${felix.configadmin.version}.jar \
+file:modules/org.apache.felix.http.bundle-${felix.http.version}.jar \
+file:modules/org.apache.felix.log-${felix.log.version}.jar \
+file:modules/org.apache.felix.shell-${felix.shell.version}.jar \
+file:modules/org.apache.felix.shell.tui-${felix.shell.text.ui.version}.jar \
+file:modules/org.apache.felix.bundlerepository-${felix.obr.version}.jar
 
 org.osgi.service.http.port=9000
 org.apache.felix.http.whiteboardEnabled=true
