Updating osgi version to 4.3.1 and felix version to 4.2.1

--- a/container/src/main/resources/config.properties
+++ b/container/src/main/resources/config.properties
@@ -14,7 +14,7 @@ file:modules/nevernote-fwk-${project.version}.jar \
 file:modules/nevernote-plugin-translator-en-${project.version}.jar \
 file:modules/nevernote-plugin-translator-fr-${project.version}.jar \
 file:modules/nevernote-plugin-upper-${project.version}.jar \
-file:modules/org.apache.felix.gogo.commands-${gogo.command.version}.jar  \
+file:modules/org.apache.felix.gogo.command-${gogo.command.version}.jar  \
 file:modules/org.apache.felix.gogo.runtime-${gogo.runtime.version}.jar \
 file:modules/jsr311-api-1.1.jar 
 
