--- a/container/pom.xml
+++ b/container/pom.xml
@@ -3,12 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <artifactId>nevernote</artifactId>
-        <groupId>devoxx</groupId>
-        <version>1.2.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+	<parent>
+		<artifactId>nevernote</artifactId>
+		<groupId>devoxx</groupId>
+		<version>1.2.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
     </parent>
+    <groupId>devoxx</groupId>
     <artifactId>container</artifactId>
     <name>Nevernote :: Container</name>
 
@@ -85,6 +86,10 @@
             <version>${project.version}</version>
         </dependency>
     
+        <dependency>
+            <groupId>org.jboss.weld.osgi</groupId>
+            <artifactId>weld-osgi-core-api</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.jboss.weld.osgi</groupId>
@@ -133,13 +138,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.felix</groupId>
-            <artifactId>org.apache.felix.gogo.command</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.felix</groupId>
-            <artifactId>org.apache.felix.gogo.runtime</artifactId>
+            <groupId>org.apache.felix.gogo</groupId>
+            <artifactId>org.apache.felix.gogo.commands</artifactId>
         </dependency>
 
         <dependency>
@@ -155,6 +155,7 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.shell</artifactId>
+            <version>1.0.2</version>
         </dependency>
 
         <dependency>
@@ -175,6 +176,7 @@
         <dependency>
             <groupId>javax.ws.rs</groupId>
             <artifactId>jsr311-api</artifactId>
+            <version>1.1</version>
         </dependency>
 
     </dependencies>
